2011-03-28  Pierre Muller  <muller@ics.u-strasbg.fr>

	* coffdump.c (coff_dump): Correct spelling error.
	(show_usage): Replace SYSROFF by COFF.

2011-03-25  Pierre Muller  <muller@ics.u-strasbg.fr>

	* coffdump.c (dump_coff_scope): Use double typecast for pointer P
	to allow compilation for all targets.

2011-03-25  Pierre Muller  <muller@ics.u-strasbg.fr>

	* dwarf.c (process_debug_info): Use offset_size to determine
	the bit-size of the computation unit's offset.
	(decode_location_expression): Use dwarf_vmatoa function to display
	DW_OP_addr OP.
	(process_debug_info): Use dwarf_vma type for local variables
	length and type_offset.

2011-03-25  Michael Snyder  <msnyder@vmware.com>

	* strings.c (print_strings): Plug memory leak.
	* ar.c (move_members): Plug memory leak.
	(delete_members): Plug memory leak.
	(write_archive): Plug memory leak.
	* ieee.c (ieee_add_bb11): Plug memory leak.
	(ieee_function_type): Likewise.
	(ieee_class_baseclass): Likewise.
	* prdbg.c (pr_function_type): Close memory leaks.
	(pr_method_type): Likewise.
	(tg_class_static_member): Likewise.
	(tg_class_method_variant): Likewise.
	(tg_class_static_method_variant): Likewise.
	* stabs.c (parse_stab_enum_type): Fix memory leaks.
	(parse_stab_struct_type): Likewise.
	(parse_stab_struct_fields): Likewise.
	(parse_stab_one_struct_field): Likewise.
	(parse_stab_members): Likewise.
	(stab_demangle_qualified): Likewise.
	* objdump.c (dump_reloc_set): Free malloced memory.
	* bucomm.c (make_tempname): Stop memory leak.

2011-03-25  Pierre Muller  <muller@ics.u-strasbg.fr>

	Replace bfd_vma type and analog types by dwarf_vma and analogs.
	Use dwarf specific print functions to display these type values.
	* dwarf.h (dwarf_signed_vma): New type;
	(DWARF2_External_LineInfo): Replace bfd_vma by dwarf_vma.
	(DWARF2_External_PubNames): Likewise.
	(DWARF2_External_CompUnit): Likewise.
	(DWARF2_External_ARange): Likewise.
	(read_leb128): Change return type to dwarf_vma.