@@ -1,3 +1,7 @@
+2011-03-29  Alan Modra  <amodra@gmail.com>
+
+	* coffdump.c: Include bfd_stdint.h
+
 2011-03-28  Pierre Muller  <muller@ics.u-strasbg.fr>
 
 	* coffdump.c (coff_dump): Correct spelling error.
